Fixed runtime issue