@@ -1,11 +1,9 @@
 public class Driver {
-
-    @SuppressWarnings("removal")
     public static void main(String[] args) {
         SLList genericLL = new SLList();
-        genericLL.add(new Integer(5));
-        genericLL.add(new Integer(3));
-        genericLL.add(new Integer(10));
+        genericLL.add(Integer.valueOf(5));
+        genericLL.add(Integer.valueOf(3));
+        genericLL.add(Integer.valueOf(10));
         genericLL.printAll(System.out);
         
     }
